A console with one clock, and a designer that asks the code what it can run
The viewer was four views of one trace. It is now a console over the whole
lab: a gallery of runs, a designer that writes a scenario, and a set of
pages that all read the same instant.

## One clock, and a slider that moves it

Every timed page — overview, usage, cost, film — takes its events from
`lib/console.tsx`, which holds one `Clock` and hands it out through
`useNow()`. Drag the bar and every page redraws as of that moment; leave
it at the end and every page shows the whole run. The film is a page of
its own, as asked, and it *borrows* the console's clock rather than making
one: `Film` now takes `clock` and `transport` props, only disposes what it
built itself, and only calls `setHold` when it owns the clock. Off the
film page there is no transport, so its playbar becomes a save bar.

Views are state, not routes. The export is static and served from any
directory, and a real navigation would unmount the clock mid-drag — so
`?run=&view=` is kept in sync through the History API instead.

## The scales stop moving

An axis whose top follows the window is a chart that lies while you drag
it. Every chart now takes its top from the whole run — `niceTop` picks the
number, `axisTicks` divides it — so the bars grow into a fixed frame.
s10-console renders all seven views over 40 traces at six clock positions
and fails if any axis label differs between two instants.

That check passed the first time it ran, which was wrong: `useNow` was
handing `useSyncExternalStore` a hardcoded zero as the server snapshot, so
all six positions were the same frame. A clock is a plain object, not a
browser API, so the snapshot is now `clock.now` — and the honest version
immediately found two real bugs. "Gone wrong" was counting raw events
(`boot`, `scenario`, `rpc_call`…, 126 of them) instead of the notable
moments the index already curates; and the cost page was quoting the
accrued-so-far figure against a sentenc